--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,9 @@
 en:
-  subject: Account activation
+  reset_pass: Password reset
+  not_empty: can't be empty
+  reset_ed: Password has been reset
+  expired: Password reset has expired.
+  forgot_password: Forgot Password
   users:
     form:
       name: "Name"
@@ -93,3 +97,16 @@ en:
       active_error: Invalid activation link
       message: "Account not activated. Check your email for the activation link."
       activate: Activate
+      subject: Account activation
+    password_reset:
+      to_reset: "To reset your password click the link below:"
+      detail: "This link will expire in two hours."
+      detail1: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+  password_resets:
+    new:
+      forgot_pass: Forgot password
+      guide: Email sent with password reset instructions
+      not_found: Email address not found
+    edit:
+      submit: Update password
+      reset_pass: Password reset
