--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,3 +26,9 @@ en:
     new:
       signup: Sign up
       detail: This will be a signup page for new users.
+      warning: Oh no! Can't find! ばか!
+      submit: Create my account
+  shared:
+    _error_messages:
+      noti: The form contains
+      error: error
