--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,13 +22,38 @@ en:
     application:
       home: "Home"
       login: "Login"
+      logout: "Logout"
+      profile: "Profile"
+      setting: "Settings"
+      account: "Account"
   users:
     new:
       signup: Sign up
       detail: This will be a signup page for new users.
       warning: Oh no! Can't find! ばか!
       submit: Create my account
+      name: Name
+      email: Email
+      password: Password
+      confirm: Confirm Password
   shared:
     _error_messages:
       noti: The form contains
       error: error
+  sessions:
+    new:
+      newuser: New user?
+      invalid: Invalid email/password combination
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            name:
+              blank: can't be blank
+            email:
+              blank: can't be blank
+              invalid: is invalid
+            password:
+              blank: can't be blank
+              too_short: is too short (minimum is 6 characters)
